--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@ the Web page is shown. The information between the HEAD and /HEAD tags is
 not displayed. The information between the BODY and /BODY tags is 
 displayed.-->
 <head>
-<title>Wong Yu Hang Totorial 1</title>
+<title>Wong Yu Hang Tutorial 1</title>
 </head>
 <!-- The information between the BODY and /BODY tags is displayed.-->
 <body>
